..F....... [ZBX-7103] improved loading speed of tr_events.php page (Sasha)
A.F....... [ZBX-1357] updated American English, Brazilian Portuguese, Czech, Dutch, French, German, Greek, Hungarian, Japanese, Italian, Romanian, Russian, Slovak, Spanish and Ukrainian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-7347] fixed custom step duration max size in action configuration (Eduard)
........S. [ZBX-7400] fixed fetching of empty text or log history data with Oracle backend (Sasha)
....I..... [ZBX-7218] fixed configuration failing with Oracle 12.1 instant client libraries (asaveljevs, Sasha)
..F....... [ZBX-6129] fixed trying to change the status of a deleted trigger or trigger prototype changes the status of all trigger and prototypes (Pavels)
..F....... [ZBX-6920] fixed displaying of soft linked IT services (Eduard)
.......PS. [ZBX-7292] fixed resolving of macros in host interfaces (Sasha)
....I..... [ZBX-7273] fixed newlines in default data strings for Oracle (Sasha)
.......PS. [ZBX-6835] fixed bug when agent/proxy connection error could have resulted in a wrong warning about message size (wiper)
A.F....... [ZBX-6760] improved performance of getting global scripts (Sasha)
........S. [ZBX-7151] limited alert message and items parameter length to 2048 characters when working with Oracle and DB2 databases (wiper)
...G...... [ZBX-6591] fixed resolution of IPv4 and IPv6 addresses if DNS hostname is specified as server parameter in configuration file; thanks to Trever L. Adams for patch (igors)
........S. [ZBX-7133] fixed processing of zabbix[host,*,available] item; fixed proxy's hosts availability data on server (Sasha)
..F....... [ZBX-7112] improved file import validation for graph items (Eduard)
A......... [ZBX-7101] fixed generated SQL queries in action.get method when simultaneously selecting more than one condition and operation (Ivo)
..F....... [ZBX-7074] fixed incorrectly parsed trigger expression in trigger wizard (Vitalij)